# iiwa_fri_description

./: CMakeLists.txt  package.xml
config/: controller.yaml  example_iiwa.rviz
launch/: example_iiwa_description.launch  example_iiwa_description_upload.launch  example_iiwa_gazebo.launch
urdf/: example_iiwa14.urdf.xacro  example_iiwa7.urdf.xacro  iiwa14.xacro  iiwa7.xacro
