<?xml version="1.0"?>
<package>
  <name>iiwa_fri_description</name>
  <version>0.0.1</version>
  <description>The iiwa_fri_description package</description>

  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>
  
  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>GPLv3</license>

  <url type="repository">http://github.com/grdwyer/iiwa_fri_description</url>
  <url type="bugtracker">http://github.com/grdwyer/iiwa_fri_description/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
